# codexonx

./: .env.example  .env.production.example  .env.staging.example  .eslintrc.json  .gitignore  .npmrc  .prettierrc  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_PUSH_COMMANDS.md  README.md  SECURITY.md  deploy.sh  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  fix-dependencies.ps1  fix-dependencies.sh  jest.config.js  jest.setup.js  jsconfig.json  lighthouserc.json  package-lock.json  package.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.shims.d.ts
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  setup-deployment.md
.github/workflows/: deploy.yml  main.yml
.storybook/: main.ts  preview.ts
apps/_codexonx-temp/: package.json
apps/codexonx-temp/: package.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: .eslintrc.js  README.md  babel.config.js  package.json  tsconfig.json
apps/server/: .env.example  .eslintrc.json  Dockerfile  ENV_DATABASE_URL.txt  jest.config.js  package.json  server-startup.js  server.js  simple-server.js  tsconfig.json
apps/web/: .env.example  .eslintrc.json  API_DOCUMENTATION.md  DOCUMENTATION.md  Dockerfile  USER_GUIDE.md  jest.setup.ts  netlify.toml  (+8 more)
nginx/: production.conf  staging.conf
prometheus/: prometheus.yml
scripts/: deploy-production.sh  deploy-staging.sh
terraform/: main.tf  terraform.tfvars.example  variables.tf
tools/: cleanup.ps1  cleanup.sh
(+311 files in other folders)
