[package]
name = "codexonx-desktop"
version = "0.1.0"
edition = "2021"
description = "CodexonX Desktop Application"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
